// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLeadBlock tests should not render technical Specification tab 1`] = `
<div>
  <div
    class="sdpTabLeadBlock css-nxi0jm"
    data-testid="tabs"
  >
    <div
      class="Tabs-tabsBar"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-1ozv57h-MuiContainer-root"
        >
          <div
            class="MuiTabs-root css-10dbxbh-MuiTabs-root"
          >
            <div
              class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="KeyboardArrowLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-agdkjh-MuiTabs-scrollbarSize"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-one"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected Tabs-tabRoot css-7sdbr4-MuiButtonBase-root-MuiTab-root"
                  data-gtm="{"id":"selector-tabs4","label":"MC: sdp.leadBlock.about","action":"Selector – Tabs"}"
                  data-testid="tab-one"
                  id="tab-one"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  MC: sdp.leadBlock.about
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="MuiTabs-indicator css-tv859c-MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="KeyboardArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-one"
      class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
      data-testid="tab-panel-lead-block-about"
      heading="MC: sdp.leadBlock.about"
      id="tabpanel-one"
      role="tabpanel"
    >
      <div
        class="section Section-root Section-white css-10chrh8"
        data-testid="tab-system-about-lead-block-section"
      >
        <div
          class=" css-ze8cyt"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-o1hazu-MuiGrid2-root"
              data-testid="grid-container"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
                data-testid="grid-item"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1218bho-MuiTypography-root"
                  data-testid="typography"
                >
                  <div
                    class="MuiTypography-root MuiTypography-body1 AboutLeadBlock-description css-1o02bdp-MuiTypography-root"
                    data-testid="typography"
                  >
                    system-desc
                  </div>
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1218bho-MuiTypography-root"
                  data-testid="typography"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-j6gfrn-MuiTypography-root"
                    data-testid="guarentees-section"
                  >
                    MC: pdp.leadBlock.guaranteesWarranties
                  </h6>
                  <img
                    alt="asset-name"
                    class="AboutLeadBlock-image"
                    data-testid="guarantee-image-asset-name"
                    src="http://localhost:8000/asset-real-file-name.pdf"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1218bho-MuiTypography-root"
                  data-testid="typography"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-j6gfrn-MuiTypography-root"
                    data-testid="awards-section"
                  >
                    MC: pdp.leadBlock.awardsCertificates
                  </h6>
                  <img
                    alt="asset-name"
                    class="AboutLeadBlock-image"
                    src="http://localhost:8000/asset-real-file-name.pdf"
                  />
                  <img
                    alt="asset-name"
                    class="AboutLeadBlock-image"
                    src="http://localhost:8000/asset-real-file-name.pdf"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1218bho-MuiTypography-root"
                  data-testid="typography"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-j6gfrn-MuiTypography-root"
                    data-testid="specification-section"
                  >
                    MC: sdp.leadBlock.specification
                  </h6>
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"asset-name","action":"http://localhost:8000/asset-real-file-name.pdf"}"
                    data-testid="specification-button"
                    href="http://localhost:8000/asset-real-file-name.pdf"
                    rel="noopener noreferrer"
                    tabindex="0"
                    target="_blank"
                  >
                    asset-name
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="LaunchIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </p>
              </div>
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-4 MuiGrid2-grid-xs-12 Grid-item css-1fx28h6-MuiGrid2-root"
                data-testid="sidebar"
              >
                <div
                  class="ColorPair-pearl css-1pt14k0"
                >
                  <div
                    class="css-1qwqwtx"
                  >
                    <div
                      class="css-asoc7f"
                    >
                      <h4
                        class="MuiTypography-root MuiTypography-h4 Typography-underline css-16mi5sh-MuiTypography-root"
                        data-testid="typography"
                      >
                        MC: sdp.leadBlock.systemBenefits
                      </h4>
                      <div
                        class="css-eler5f"
                      >
                        <ul
                          class="css-1wmdec9"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render 1`] = `
<div>
  <div
    class="sdpTabLeadBlock css-nxi0jm"
    data-testid="tabs"
  >
    <div
      class="Tabs-tabsBar"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-1ozv57h-MuiContainer-root"
        >
          <div
            class="MuiTabs-root css-10dbxbh-MuiTabs-root"
          >
            <div
              class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="KeyboardArrowLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-agdkjh-MuiTabs-scrollbarSize"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-one"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected Tabs-tabRoot css-7sdbr4-MuiButtonBase-root-MuiTab-root"
                  data-gtm="{"id":"selector-tabs4","label":"MC: sdp.leadBlock.about","action":"Selector – Tabs"}"
                  data-testid="tab-one"
                  id="tab-one"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  MC: sdp.leadBlock.about
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-two"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-tabRoot css-7sdbr4-MuiButtonBase-root-MuiTab-root"
                  data-gtm="{"id":"selector-tabs4","label":"MC: sdp.leadBlock.technicalSpecification","action":"Selector – Tabs"}"
                  data-testid="tab-two"
                  id="tab-two"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  MC: sdp.leadBlock.technicalSpecification
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-three"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-tabRoot css-7sdbr4-MuiButtonBase-root-MuiTab-root"
                  data-gtm="{"id":"selector-tabs4","label":"MC: sdp.leadBlock.documentsAndDownloads","action":"Selector – Tabs"}"
                  data-testid="tab-three"
                  id="tab-three"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  MC: sdp.leadBlock.documentsAndDownloads
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="MuiTabs-indicator css-tv859c-MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              class="MuiButtonBase-root MuiTabScrollButton-root MuiTabScrollButton-horizontal Mui-disabled MuiTabs-scrollButtons tabsScrollBtn css-145v6pe-MuiButtonBase-root-MuiTabScrollButton-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="KeyboardArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-one"
      class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
      data-testid="tab-panel-lead-block-about"
      heading="MC: sdp.leadBlock.about"
      id="tabpanel-one"
      role="tabpanel"
    >
      <div
        class="section Section-root Section-white css-10chrh8"
        data-testid="tab-system-about-lead-block-section"
      >
        <div
          class=" css-ze8cyt"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-o1hazu-MuiGrid2-root"
              data-testid="grid-container"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
                data-testid="grid-item"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1218bho-MuiTypography-root"
                  data-testid="typography"
                >
                  <div
                    class="MuiTypography-root MuiTypography-body1 AboutLeadBlock-description css-1o02bdp-MuiTypography-root"
                    data-testid="typography"
                  >
                    system-desc
                  </div>
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1218bho-MuiTypography-root"
                  data-testid="typography"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-j6gfrn-MuiTypography-root"
                    data-testid="guarentees-section"
                  >
                    MC: pdp.leadBlock.guaranteesWarranties
                  </h6>
                  <img
                    alt="asset-name"
                    class="AboutLeadBlock-image"
                    data-testid="guarantee-image-asset-name"
                    src="http://localhost:8000/asset-real-file-name.pdf"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1218bho-MuiTypography-root"
                  data-testid="typography"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-j6gfrn-MuiTypography-root"
                    data-testid="awards-section"
                  >
                    MC: pdp.leadBlock.awardsCertificates
                  </h6>
                  <img
                    alt="asset-name"
                    class="AboutLeadBlock-image"
                    src="http://localhost:8000/asset-real-file-name.pdf"
                  />
                  <img
                    alt="asset-name"
                    class="AboutLeadBlock-image"
                    src="http://localhost:8000/asset-real-file-name.pdf"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1218bho-MuiTypography-root"
                  data-testid="typography"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-j6gfrn-MuiTypography-root"
                    data-testid="specification-section"
                  >
                    MC: sdp.leadBlock.specification
                  </h6>
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"asset-name","action":"http://localhost:8000/asset-real-file-name.pdf"}"
                    data-testid="specification-button"
                    href="http://localhost:8000/asset-real-file-name.pdf"
                    rel="noopener noreferrer"
                    tabindex="0"
                    target="_blank"
                  >
                    asset-name
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="LaunchIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </p>
              </div>
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-4 MuiGrid2-grid-xs-12 Grid-item css-1fx28h6-MuiGrid2-root"
                data-testid="sidebar"
              >
                <div
                  class="ColorPair-pearl css-1pt14k0"
                >
                  <div
                    class="css-1qwqwtx"
                  >
                    <div
                      class="css-asoc7f"
                    >
                      <h4
                        class="MuiTypography-root MuiTypography-h4 Typography-underline css-16mi5sh-MuiTypography-root"
                        data-testid="typography"
                      >
                        MC: sdp.leadBlock.systemBenefits
                      </h4>
                      <div
                        class="css-eler5f"
                      >
                        <ul
                          class="css-1wmdec9"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-two"
      class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
      data-testid="tab-panel-lead-block-technical-specification"
      heading="MC: sdp.leadBlock.technicalSpecification"
      hidden=""
      id="tabpanel-two"
      role="tabpanel"
    >
      <div
        class="section Section-root Section-white css-10chrh8"
        data-testid="tab-system-tech-spec-lead-block-section"
      >
        <div
          class=" css-ze8cyt"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-12zstsi-MuiGrid2-root"
              data-testid="grid-container"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
                data-testid="grid-item"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1218bho-MuiTypography-root"
                  data-testid="typography"
                >
                  <div
                    class="SystemDetailsTechnicalSpec"
                    data-testid="technical-specification-classifications-table-wrapper"
                  >
                    <div
                      class="css-ya57aw"
                    >
                      <table
                        class="MuiTable-root Table-evenColor css-wsrw3a-MuiTable-root"
                        data-testid="table"
                      >
                        <thead
                          class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
                          data-testid="table-head"
                        >
                          <tr
                            class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
                          >
                            <th
                              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                              scope="col"
                            >
                              appearanceAttributes
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                              scope="col"
                            />
                          </tr>
                        </thead>
                        <tbody
                          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                        >
                          <tr
                            class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                            >
                              classification-feature-name
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                            >
                              classification-feature-value
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-three"
      class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
      data-testid="tab-panel-lead-block-documents-and-downloads"
      heading="MC: sdp.leadBlock.documentsAndDownloads"
      hidden=""
      id="tabpanel-three"
      role="tabpanel"
    >
      <div
        class="section Section-root Section-white css-10chrh8"
        data-testid="tab-system-documents-section"
      >
        <div
          class=" css-ze8cyt"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
          >
            <div
              class="css-asoc7f"
            >
              <div
                class="css-eler5f"
              >
                <div>
                  <div
                    class="tableContainer"
                  >
                    <div
                      class="DocumentSimpleTableResults css-1iwuinm"
                      data-testid="document-simple-table-results"
                    >
                      <div
                        class="css-ya57aw"
                      >
                        <table
                          class="MuiTable-root Table-rowNoColor css-wsrw3a-MuiTable-root"
                          data-testid="table"
                        >
                          <thead
                            class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
                            data-testid="table-head"
                          >
                            <tr
                              class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
                            >
                              <th
                                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                                scope="col"
                              >
                                MC: documentLibrary.headers.type
                              </th>
                              <th
                                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                                scope="col"
                              >
                                MC: documentLibrary.headers.title
                              </th>
                              <th
                                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader css-1tbee56-MuiTableCell-root"
                                scope="col"
                              >
                                MC: documentLibrary.headers.download
                              </th>
                              <th
                                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader css-1tbee56-MuiTableCell-root"
                                scope="col"
                              >
                                MC: documentLibrary.headers.add
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                          >
                            <tr
                              class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
                              data-testid="document-table-row-pim-link-document-id"
                            >
                              <td
                                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1q1hfwv-MuiTableCell-root"
                                data-testid="document-table-type-pim-link-document-id"
                              >
                                asset-name
                              </td>
                              <td
                                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ggd0b4-MuiTableCell-root"
                                data-testid="document-table-title-pim-link-document-id"
                              >
                                <p
                                  class="css-1d9wl9h"
                                >
                                  pim-link-document-title
                                </p>
                              </td>
                              <td
                                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1q1hfwv-MuiTableCell-root"
                                data-testid="document-table-download-pim-link-document-id"
                              >
                                <a
                                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                                  data-gtm="{"id":"download1","label":"Download","action":"http://localhost/pim-link-document-id"}"
                                  data-testid="document-table-download-application/pdf-button"
                                  href="http://localhost/pim-link-document-id"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                >
                                  <span
                                    class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                                  >
                                    <svg
                                      class="download-icon css-x3wokz"
                                      viewBox="0 0 32 32"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M0 0h32v32H0z"
                                        fill="none"
                                      />
                                      <path
                                        d="M21 2H8v28h21V10Z"
                                        fill="#aeb1b1"
                                      />
                                      <path
                                        d="M9 29V3h12v7h7v19Z"
                                        fill="#fff"
                                      />
                                      <rect
                                        fill="#d43533"
                                        height="10"
                                        rx="1"
                                        width="21"
                                        x="3"
                                        y="15"
                                      />
                                      <g
                                        fill="#fff"
                                      >
                                        <path
                                          d="M6 23v-6h1.944c.737 0 2.556.132 2.556 2 0 1.9-1.95 2-2.5 2H7v2Zm1-5v2h.874c.672 0 1.474-.121 1.474-1 0-.814-.7-1-1.551-1ZM11 17h2.214A2.838 2.838 0 0 1 16 19.885V20a2.8 2.8 0 0 1-2.592 2.994.914.914 0 0 0-.128.006H11Zm1 1v4h1.116a1.757 1.757 0 0 0 1.9-1.602v-.004A1.729 1.729 0 0 0 15 20c0-1.628-1.222-2-2.244-2ZM17 23v-6h4v1h-3v1.5h2.5v1H18V23Z"
                                        />
                                      </g>
                                    </svg>
                                  </span>
                                  10 B
                                  <span
                                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                  />
                                </a>
                              </td>
                              <td
                                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1wzxo7t-MuiTableCell-root"
                                data-testid="document-table-add-pim-link-document-id"
                              >
                                <span
                                  aria-label="MC: documents.download.maxReached"
                                  class=""
                                  data-mui-internal-clone-element="true"
                                >
                                  <div
                                    class="MuiFormControl-root css-1gluykh-MuiFormControl-root"
                                  >
                                    <label
                                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                                    >
                                      <span
                                        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                                      >
                                        <input
                                          aria-label="MC: documentLibrary.download pim-link-document-title"
                                          class="PrivateSwitchBase-input css-1m9pwf3"
                                          data-indeterminate="false"
                                          name="pim-link-document-id-pim-link-document-title"
                                          type="checkbox"
                                        />
                                        <svg
                                          aria-hidden="true"
                                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                          data-testid="CheckBoxOutlineBlankIcon"
                                          focusable="false"
                                          viewBox="0 0 24 24"
                                        >
                                          <path
                                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                          />
                                        </svg>
                                        <span
                                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                        />
                                      </span>
                                    </label>
                                  </div>
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
                              data-testid="document-table-row-pim-link-document-id"
                            >
                              <td
                                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1q1hfwv-MuiTableCell-root"
                                data-testid="document-table-type-pim-link-document-id"
                              >
                                asset-name
                              </td>
                              <td
                                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ggd0b4-MuiTableCell-root"
                                data-testid="document-table-title-pim-link-document-id"
                              >
                                <p
                                  class="css-1d9wl9h"
                                >
                                  pim-link-document-title
                                </p>
                              </td>
                              <td
                                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1q1hfwv-MuiTableCell-root"
                                data-testid="document-table-download-pim-link-document-id"
                              >
                                <a
                                  class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-medium Button-text MuiIconButton-sizeLarge css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
                                  data-testid="document-table-external-link-button"
                                  href="http://localhost/pim-link-document-id"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                >
                                  <svg
                                    class="css-154ktap"
                                    viewBox="0 0 32 32"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M28 2H10l-8 8v18a2.006 2.006 0 0 0 2 2h24a2.006 2.006 0 0 0 2-2V4a2.006 2.006 0 0 0-2-2Zm-4.12 8.54-6.96 6.96-2.41-2.41 6.96-6.96L18.34 5l8.65.01.01 8.65Z"
                                    />
                                  </svg>
                                  <span
                                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                  />
                                </a>
                              </td>
                              <td
                                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1wzxo7t-MuiTableCell-root"
                                data-testid="document-table-add-pim-link-document-id"
                              >
                                <span
                                  class="css-1ytj21s"
                                >
                                  -
                                </span>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                  <div
                    class="DocumentResultsFooter"
                    data-testid="document-results-footer"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways clear-downloads Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
                      data-testid="anchor-link"
                      type="button"
                    >
                      <span>
                        MC: downloadList.clear
                      </span>
                    </a>
                    <button
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{"id":"download3-button1","label":"MC: downloadList.download (0)","action":"[]"}"
                      data-testid="document-table-download-button"
                      tabindex="0"
                      type="button"
                    >
                      MC: downloadList.download (0)
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                    <p
                      class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-1o02bdp-MuiTypography-root"
                      data-testid="typography"
                    >
                      This site is protected by reCAPTCHA and the Google 
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
                        data-testid="recaptcha-privacy-policy-link"
                        href="https://policies.google.com/privacy"
                        rel="noreferrer noopener"
                        target="_blank"
                      >
                        <span>
                          Privacy Policy
                        </span>
                      </a>
                       and 
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
                        data-testid="recaptcha-terms-of-service-link"
                        href="https://policies.google.com/terms"
                        rel="noreferrer noopener"
                        target="_blank"
                      >
                        <span>
                          Terms of Service
                        </span>
                      </a>
                       apply.
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render documents and downloads 1`] = `
<div
  aria-labelledby="tab-three"
  class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
  data-testid="tab-panel-lead-block-documents-and-downloads"
  heading="MC: sdp.leadBlock.documentsAndDownloads"
  hidden=""
  id="tabpanel-three"
  role="tabpanel"
>
  <div
    class="section Section-root Section-white css-10chrh8"
    data-testid="tab-system-documents-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="css-asoc7f"
        >
          <div
            class="css-eler5f"
          >
            <div>
              <div
                class="tableContainer"
              >
                <div
                  class="DocumentSimpleTableResults css-1iwuinm"
                  data-testid="document-simple-table-results"
                >
                  <div
                    class="css-ya57aw"
                  >
                    <table
                      class="MuiTable-root Table-rowNoColor css-wsrw3a-MuiTable-root"
                      data-testid="table"
                    >
                      <thead
                        class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
                        data-testid="table-head"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                            scope="col"
                          >
                            MC: documentLibrary.headers.type
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                            scope="col"
                          >
                            MC: documentLibrary.headers.title
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader css-1tbee56-MuiTableCell-root"
                            scope="col"
                          >
                            MC: documentLibrary.headers.download
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader css-1tbee56-MuiTableCell-root"
                            scope="col"
                          >
                            MC: documentLibrary.headers.add
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
                          data-testid="document-table-row-pim-link-document-id"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1q1hfwv-MuiTableCell-root"
                            data-testid="document-table-type-pim-link-document-id"
                          >
                            asset-name
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ggd0b4-MuiTableCell-root"
                            data-testid="document-table-title-pim-link-document-id"
                          >
                            <p
                              class="css-1d9wl9h"
                            >
                              pim-link-document-title
                            </p>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1q1hfwv-MuiTableCell-root"
                            data-testid="document-table-download-pim-link-document-id"
                          >
                            <a
                              class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                              data-gtm="{"id":"download1","label":"Download","action":"http://localhost/pim-link-document-id"}"
                              data-testid="document-table-download-application/pdf-button"
                              href="http://localhost/pim-link-document-id"
                              rel="noopener noreferrer"
                              tabindex="0"
                              target="_blank"
                            >
                              <span
                                class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                              >
                                <svg
                                  class="download-icon css-x3wokz"
                                  viewBox="0 0 32 32"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M0 0h32v32H0z"
                                    fill="none"
                                  />
                                  <path
                                    d="M21 2H8v28h21V10Z"
                                    fill="#aeb1b1"
                                  />
                                  <path
                                    d="M9 29V3h12v7h7v19Z"
                                    fill="#fff"
                                  />
                                  <rect
                                    fill="#d43533"
                                    height="10"
                                    rx="1"
                                    width="21"
                                    x="3"
                                    y="15"
                                  />
                                  <g
                                    fill="#fff"
                                  >
                                    <path
                                      d="M6 23v-6h1.944c.737 0 2.556.132 2.556 2 0 1.9-1.95 2-2.5 2H7v2Zm1-5v2h.874c.672 0 1.474-.121 1.474-1 0-.814-.7-1-1.551-1ZM11 17h2.214A2.838 2.838 0 0 1 16 19.885V20a2.8 2.8 0 0 1-2.592 2.994.914.914 0 0 0-.128.006H11Zm1 1v4h1.116a1.757 1.757 0 0 0 1.9-1.602v-.004A1.729 1.729 0 0 0 15 20c0-1.628-1.222-2-2.244-2ZM17 23v-6h4v1h-3v1.5h2.5v1H18V23Z"
                                    />
                                  </g>
                                </svg>
                              </span>
                              10 B
                              <span
                                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                              />
                            </a>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1wzxo7t-MuiTableCell-root"
                            data-testid="document-table-add-pim-link-document-id"
                          >
                            <span
                              aria-label="MC: documents.download.maxReached"
                              class=""
                              data-mui-internal-clone-element="true"
                            >
                              <div
                                class="MuiFormControl-root css-1gluykh-MuiFormControl-root"
                              >
                                <label
                                  class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                                >
                                  <span
                                    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                                  >
                                    <input
                                      aria-label="MC: documentLibrary.download pim-link-document-title"
                                      class="PrivateSwitchBase-input css-1m9pwf3"
                                      data-indeterminate="false"
                                      name="pim-link-document-id-pim-link-document-title"
                                      type="checkbox"
                                    />
                                    <svg
                                      aria-hidden="true"
                                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                      data-testid="CheckBoxOutlineBlankIcon"
                                      focusable="false"
                                      viewBox="0 0 24 24"
                                    >
                                      <path
                                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                      />
                                    </svg>
                                    <span
                                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                    />
                                  </span>
                                </label>
                              </div>
                            </span>
                          </td>
                        </tr>
                        <tr
                          class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
                          data-testid="document-table-row-pim-link-document-id"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1q1hfwv-MuiTableCell-root"
                            data-testid="document-table-type-pim-link-document-id"
                          >
                            asset-name
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ggd0b4-MuiTableCell-root"
                            data-testid="document-table-title-pim-link-document-id"
                          >
                            <p
                              class="css-1d9wl9h"
                            >
                              pim-link-document-title
                            </p>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1q1hfwv-MuiTableCell-root"
                            data-testid="document-table-download-pim-link-document-id"
                          >
                            <a
                              class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-medium Button-text MuiIconButton-sizeLarge css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
                              data-testid="document-table-external-link-button"
                              href="http://localhost/pim-link-document-id"
                              rel="noopener noreferrer"
                              tabindex="0"
                              target="_blank"
                            >
                              <svg
                                class="css-154ktap"
                                viewBox="0 0 32 32"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M28 2H10l-8 8v18a2.006 2.006 0 0 0 2 2h24a2.006 2.006 0 0 0 2-2V4a2.006 2.006 0 0 0-2-2Zm-4.12 8.54-6.96 6.96-2.41-2.41 6.96-6.96L18.34 5l8.65.01.01 8.65Z"
                                />
                              </svg>
                              <span
                                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                              />
                            </a>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1wzxo7t-MuiTableCell-root"
                            data-testid="document-table-add-pim-link-document-id"
                          >
                            <span
                              class="css-1ytj21s"
                            >
                              -
                            </span>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
              <div
                class="DocumentResultsFooter"
                data-testid="document-results-footer"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways clear-downloads Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
                  data-testid="anchor-link"
                  type="button"
                >
                  <span>
                    MC: downloadList.clear
                  </span>
                </a>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"download3-button1","label":"MC: downloadList.download (0)","action":"[]"}"
                  data-testid="document-table-download-button"
                  tabindex="0"
                  type="button"
                >
                  MC: downloadList.download (0)
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
                <p
                  class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-1o02bdp-MuiTypography-root"
                  data-testid="typography"
                >
                  This site is protected by reCAPTCHA and the Google 
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
                    data-testid="recaptcha-privacy-policy-link"
                    href="https://policies.google.com/privacy"
                    rel="noreferrer noopener"
                    target="_blank"
                  >
                    <span>
                      Privacy Policy
                    </span>
                  </a>
                   and 
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
                    data-testid="recaptcha-terms-of-service-link"
                    href="https://policies.google.com/terms"
                    rel="noreferrer noopener"
                    target="_blank"
                  >
                    <span>
                      Terms of Service
                    </span>
                  </a>
                   apply.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render the bimIframe tab 1`] = `
<div
  aria-labelledby="tab-four"
  class="Tabs-tabPanel Tabs-tabPanelBox MuiBox-root css-923awc"
  data-testid="tab-panel-lead-block-bim"
  heading="MC: sdp.tabs.bim"
  hidden=""
  id="tabpanel-four"
  role="tabpanel"
>
  <div
    class="bimLeadBlock"
  >
    <div
      class="section Section-root Section-pearl css-10chrh8"
      data-testid="tab-system-bim-lead-block-section"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-12zstsi-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
              data-testid="grid-item"
            >
              <h2
                class="MuiTypography-root MuiTypography-h2 Typography-underline css-8cj2y3-MuiTypography-root"
                data-testid="typography"
              >
                BIM_CODE
              </h2>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1218bho-MuiTypography-root"
                data-testid="typography"
              />
            </div>
            <iframe
              class="assetsIframe bmiIframe"
              data-testid="bmi-iframe"
              src="http://nowhere.com"
              title="BIM_CODE"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
